--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@mui/material": "^5.15.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "typewriter-effect": "^2.21.0"
+    "typewriter-effect": "^2.21.0",
+    "uniqid": "^5.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
